@@ -13,7 +13,7 @@
 		<blockquote>
 			<ul>
 				<li>
-					Compiler tool can now amalgate into stand-alone executables
+					Compiler tool can now amalgate Lua programs into stand-alone executables
 				</li>
 				<li>
 					Compiler tool: Now works with Lua 5.1/5.2/5.3 using the method shown in
@@ -24,6 +24,13 @@
 				<li>
 					Building a standalone tekUI executable now works under Windows and using
 					cross-compilation
+				</li>
+				<li>
+					Some X11 font issues corrected
+				</li>
+				<li>
+					Windows display driver could try to send tekUI messages to foreign
+					windows, leading to a crash, corrected
 				</li>
 			</ul>
 		</blockquote>
